id with class.html

--- a/id.html
+++ b/id.html
@@ -8,14 +8,19 @@
   padding: 20px;
   text-align: center;
 } 
+  .city {
+  background-color: tomato;
+  color: white;
+  padding: 15px;
+  text-align: centre;
+} 
 </style>
 </head>
 <body>
-
-
-<p></p>
-
+  
 <h1 id="idHtml">ID ATTRIBUTE</h1>
+  <br>
+  <h2 id="city">CLASS AND ID</h2>
 
 </body>
 </html>
