id and class.html

--- a/id.html
+++ b/id.html
@@ -20,7 +20,7 @@
   
 <h1 id="idHtml">ID ATTRIBUTE</h1>
   <br>
-  <h2 id="city">CLASS AND ID</h2>
+  <h2 class="city">CLASS AND ID</h2>
 
 </body>
 </html>
