--- a/form_elements.html
+++ b/form_elements.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>Select Element</h2>
+<h2>Elements</h2>
 
 <form action="/action_page.php">
   <label for="state">Choose the state :</label>
